--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href="/dorama-blossom-voyage/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MundoDorama - Emoções que atravessam o mundo</title>
     <meta name="description" content="Descubra os melhores doramas asiáticos - coreanos, japoneses, chineses e tailandeses. Sinopses, elencos e links para streaming oficial." />
